--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>VBIM Viewer</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div
+      id="container"
+      style="position: absolute; left: 0; right: 0; top: 0; bottom: 0"
+    ></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
